# anomalib

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  PR_DESCRIPTION.md  README.md  SECURITY.md  pyproject.toml  third-party-programs.txt
.github/: gitmessage  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation.yaml  epic.yaml  feature_request.yaml  question.yaml  task.yaml  user_story.yaml
.github/actions/code-quality/pre-commit/: action.yaml
.github/actions/pytest/: action.yaml
.github/actions/security/bandit/: README.md  action.yaml
.github/actions/security/clamav/: action.yaml
.github/actions/security/semgrep/: README.md  action.yaml
.github/actions/security/trivy/: README.md  action.yaml
.github/actions/security/zizmor/: README.md  action.yaml
.github/workflows/: _reusable-artifact-builder.yaml  _reusable-code-quality.yaml  _reusable-commit-message-check.yaml  _reusable-pr-title-check.yaml  _reusable-production-release-process.yaml  _reusable-rc-release-process.yaml  _reusable-release-publisher.yaml  _reusable-release-status.yaml  _reusable-release-validation.yaml  _reusable-security-scan.yaml  _reusable-test-suite.yaml  _reusable-version-bump.yaml  _reusable-version-check.yaml  issue-management.yaml  pr.yaml  pre_merge.yml  release.yaml  renovate-config-validator.yml  renovate.yml  scorecards.yml  security-checks.yaml
docs/source/: conf.py
docs/source/markdown/get_started/: anomalib.md
docs/source/snippets/install/: source.txt
examples/api/02_data/: mvtec_loco.py  mvtecad2.py
examples/api/03_models/: efficient_ad.py
examples/cli/00_installation/: pip_install.sh  source_install.sh  uv_install.sh
examples/configs/data/: mpdd.yaml  tabular.yaml
examples/configs/model/: dinomaly.yaml  uninet.yaml
examples/notebooks/: README.md
examples/notebooks/000_getting_started/: 001_getting_started.ipynb  README.md
examples/notebooks/01_getting_started/: README.md  getting_started.ipynb
examples/notebooks/02_data/: README.md
examples/notebooks/02_data/datamodules/: btech.ipynb  folder.ipynb  mvtec.ipynb  tabular.ipynb
examples/notebooks/02_data/utils/: tiling.ipynb
examples/notebooks/03_models/: README.md  fastflow.ipynb
examples/notebooks/04_metrics/: README.md  aupimo.ipynb
examples/notebooks/05_loggers/: README.md  mlflow.ipynb
examples/notebooks/06_visualization/: README.md  visualize_image.ipynb
examples/notebooks/07_deployment/: README.md  openvino_quantization.ipynb
examples/notebooks/100_datamodules/: 103_folder.ipynb  105_tabular.ipynb  README.md
examples/notebooks/200_models/: 201_fastflow.ipynb  README.md
examples/notebooks/400_openvino/: 401_nncf.ipynb  README.md
examples/notebooks/500_use_cases/501_dobot/: README.md
examples/notebooks/700_metrics/: 701a_aupimo.ipynb  701b_aupimo_advanced_i.ipynb  701c_aupimo_advanced_ii.ipynb
src/anomalib/: __init__.py
src/anomalib/callbacks/: __init__.py  checkpoint.py  graph.py  model_loader.py  tiler_configuration.py  timer.py  visualizer.py
src/anomalib/callbacks/nncf/: __init__.py  callback.py  utils.py
src/anomalib/cli/: __init__.py  cli.py  install.py  pipelines.py
src/anomalib/cli/utils/: __init__.py  help_formatter.py  installation.py  openvino.py
src/anomalib/data/: __init__.py  errors.py  predict.py
src/anomalib/data/dataclasses/: __init__.py  generic.py
src/anomalib/data/datamodules/: __init__.py
src/anomalib/data/datasets/: __init__.py
src/anomalib/data/transforms/: __init__.py  center_crop.py  multi_random_choice.py  utils.py
src/anomalib/data/utils/: __init__.py  boxes.py  download.py  image.py  label.py  path.py  split.py  synthetic.py  tiler.py  (+1 more)
src/anomalib/deploy/: __init__.py  export.py
src/anomalib/engine/: __init__.py  engine.py
src/anomalib/loggers/: __init__.py  base.py  comet.py  mlflow.py  tensorboard.py  wandb.py
src/anomalib/metrics/: __init__.py  anomaly_score_distribution.py  aupr.py  aupro.py  auroc.py  base.py  binning.py  evaluator.py  f1_score.py  min_max.py  precision_recall_curve.py  pro.py  utils.py
src/anomalib/models/: __init__.py
src/anomalib/pipelines/: __init__.py  types.py
src/anomalib/post_processing/: __init__.py  one_class.py  post_processor.py
src/anomalib/pre_processing/: __init__.py  pre_processor.py
src/anomalib/utils/: __init__.py  attrs.py  config.py  deprecation.py  logging.py  path.py  post_processing.py
src/anomalib/visualization/: __init__.py  base.py
tests/: README.md  __init__.py  conftest.py
tests/helpers/: __init__.py  data.py
tests/integration/: __init__.py  test_task_types.py
tests/integration/cli/: __init__.py  test_cli.py
tests/integration/model/: __init__.py  test_models.py
tests/integration/pipelines/: __init__.py  test_benchmark.py  test_tiled_ensemble.py  tiled_ensemble.yaml
tests/integration/tools/: __init__.py  conftest.py  test_gradio_entrypoint.py  test_lightning_entrypoint.py  test_openvino_entrypoint.py  test_torch_entrypoint.py
tests/unit/: __init__.py
tests/unit/cli/: __init__.py  test_help_formatter.py  test_installation.py
tests/unit/data/: __init__.py  conftest.py
tests/unit/deploy/: __init__.py  test_inferencer.py
tests/unit/engine/: test_engine.py
tests/unit/metrics/: __init__.py  test_adaptive_threshold.py  test_anomalib_metric.py  test_binning.py  test_f1_max.py  test_min_max.py  test_precision_recall.py  test_pro.py
tests/unit/models/: __init__.py  test_feature_extractor.py  test_model_utils.py
tests/unit/pipelines/: __init__.py
tests/unit/post_processing/: test_post_processor.py
tests/unit/pre_processing/: test_pre_processing.py
tests/unit/utils/: __init__.py  test_deprecate.py  test_visualizer.py
tools/experimental/: __init__.py
tools/experimental/benchmarking/: __init__.py  benchmark.py  sample.yaml
tools/inference/: gradio_inference.py  lightning_inference.py  openvino_inference.py  torch_inference.py
tools/tiled_ensemble/: ens_config.yaml  eval.py  train.py
workspace/: ead.py  print_timm.py  readme.md  timm_train.py
(+395 files in other folders)
